TestRepo2/src/objects/Legal_Disclaimer__c.object
<CustomObject>
    <description>POS Project: object that represents a legal disclaimer which is presented on the POS Portal before users enter into the e-commerce platform</description>
    <fields>
        <fullName>Alternative_Message__c</fullName>
        <label>Alternative Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ItemsCatalog_Message__c</fullName>
        <description>message displayed on every page on generated ItemsCatalog pdf.</description>
        <label>ItemsCatalog Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Legal Disclaimer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LGD-{000000}</displayFormat>
        <label>Legal Disclaimer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Disclaimers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <description>End Date must always be greater than Start Date</description>
        <errorConditionFormula>NOT(ISBLANK(End_Date__c)) &amp;&amp; (End_Date__c &lt;= Start_Date__c)</errorConditionFormula>
        <errorMessage>The end date must always be greater than the start date</errorMessage>
    </validationRules>
</CustomObject>